Troka Foto Iha Link Istoria

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <div class="col">
         <ul class="timeline">
           <li>
-            <div class="timeline-image" style="background-image: url(img/pw.jpg);"></div>
+            <div class="timeline-image" style="background-image: url(img/igreja.jpg);"></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
               <h3>Primeira Vez Hasoru Malu</h3>
@@ -208,7 +208,7 @@ Istória ne’e hasnee: Iha momentu kalan ne’ebá maizumenus jam 6 ho balun ka
       <div class="col">
         <ul class="timeline">
           <li class="timeline-inverted">
-            <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
+            <div class="timeline-image" style="background-image: url(img/serius.jpg);"></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
               <h3>Mulai Serius</h3>
@@ -237,7 +237,7 @@ FJFA5V.
       <div class="col">
         <ul class="timeline">
           <li class="">
-            <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
+            <div class="timeline-image" style="background-image: url(img/pw.jpg);"></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
               <h3>Tunangan</h3>
