--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
 
+    <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:wght@100;300;400;600;700&display=swap" rel="stylesheet">
 
 
     <!-- simplycountdown -->
-
     <link rel="stylesheet" href="countdown/simplyCountdown.theme.default.css"/>
     <script src="countdown/simplyCountdown.min.js"></script>
 
     <!-- Bootstrap Icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
+    <!-- My Css -->
     <link rel="stylesheet" type="text/css" href="style.css">
 
 
   </head>
   <body>
+    <!-- Hero -->
 
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
       <main>
@@ -37,7 +39,9 @@
 
       </main>
     </section>
+    <!-- End Of Hero -->
 
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-md bg-transparent sticky-top mynavbar">
   <div class="container">
     <a class="navbar-brand" href="#">FJFA5V</a>
@@ -63,8 +67,9 @@
     </div>
   </div>
 </nav>
+<!-- End Of Navbar -->
 
-
+<!-- Home -->
 <section id="home" class="home">
 
   <div class="container">
@@ -108,7 +113,9 @@
     </div>
   </div>
 </section>
+<!-- End Of Home -->
 
+<!-- Info -->
 <section id="info" class="info">
   <div class="container">
     <div class="row justify-content-center">
@@ -169,8 +176,10 @@
     </div>
   </div>
 </section>
+<!-- End Of Info -->
 
 
+<!-- Istoria -->
 <section id="story" class="story">
 
   <div class="container">
@@ -253,9 +262,11 @@ FJFA5V.
       </div>
     </div>
   </div>
-  
-</section>
 
+</section>
+<!-- End Of Istoria -->
+
+<!-- Gallery -->
 <section id="gallery" class="gallery">
   <div class="container">
   <div class="row justify-content-center">
@@ -320,7 +331,9 @@ FJFA5V.
       </div>
     </div>
 </section>
+<!-- End Of Gallery -->
 
+<!-- RSVP -->
 <section id="rsvp" class="rsvp">
     <div class="container">
   <div class="row justify-content-center">
@@ -388,7 +401,9 @@ FJFA5V.
 </div>
 </div>
 </section>
+<!-- End Of Rsvp -->
 
+<!-- Gifts -->
 <section id="gifts" class="gifts">
    <div class="container">
   <div class="row justify-content-center">
@@ -419,7 +434,9 @@ FJFA5V.
     </div>
   </div>
 </section>
+<!-- End Of RSVP -->
 
+<!-- Footer -->
 <footer>
   <div class="container">
     <div class="row">
@@ -436,7 +453,9 @@ FJFA5V.
     </div>
   </div>
 </footer>
+<!-- End Of Footer -->
 
+<!-- Audio -->
 <div id="audio-container">
   <audio id="song" autoplay loop>
     <source src="audio/dreams.mp3" type="audio/mp3">
@@ -446,6 +465,7 @@ FJFA5V.
     
   </div>  
 </div>
+<!-- End Of Audio -->
 
 
     <!-- Bootstrap -->
